fixing border colors on dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@
   }
   
   .App.dark-mode .card {
-    background-color: #333;
-    color: #fff;
+    border-color: #2f3336;
   }
   
